SLBLOG-51 fixed issues in jquery overlap and minor style issues

--- a/archive/2010/12/examples2.css
+++ b/archive/2010/12/examples2.css
@@ -1,7 +1,6 @@
 #running {
 	background-color: gray;
 	margin: auto;
-	height: 240px;
 	width: 300px;
 	padding-left: 50px;
 }
